# HeterogeneousGenomeGzip

./: readme.md
gzip_bs/: CMakeLists.txt  go.sh
gzip_bs/src/: Common.h  HuffmanTree.hpp  MyGZip.cpp  MyGZip.h  test.cpp
gzip_bs/src/energysampler/: utils.h
gzip_cpu/: CMakeLists.txt
gzip_cpu/src/: Common.cpp  HashTable.cpp  HashTable.h  HuffmanTree.hpp  MyGZip.cpp  MyGZip.h  test.cpp
gzip_cpu/src/energysampler/: energysampler.cc  energysampler.h  util.cc
